--- a/week02/design.html
+++ b/week02/design.html
@@ -6,6 +6,13 @@
     <title>Design</title>
     <!-- Enlazar el archivo CSS externo -->
     <link rel="stylesheet" href="design.css">
+    <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Título de tu página">
+<meta property="og:type" content="website">
+<meta property="og:image" content="URL_de_la_imagen">
+<meta property="og:url" content="URL_canónica_de_tu_página">
+
+
 </head>
 <body>
     <!-- Contenido proporcionado de CodePen -->
