cambios en codigos html, css y js

--- a/week02/design.html
+++ b/week02/design.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design</title>
-    <!-- Enlazar el archivo CSS externo -->
+    <title>Título de tu página</title> 
     <link rel="stylesheet" href="design.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Título de tu página">
-<meta property="og:type" content="website">
-<meta property="og:image" content="URL_de_la_imagen">
-<meta property="og:url" content="URL_canónica_de_tu_página">
-
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="URL_de_la_imagen"> <!-- Ajusta la URL de la imagen -->
+    <meta property="og:url" content="URL_canónica_de_tu_página"> <!-- Ajusta la URL canónica de tu página -->
+    <script src="design.js"></script>
 
 </head>
 <body>
@@ -22,3 +21,4 @@
     </div>
 </body>
 </html>
+
