--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>[Danny Rausseo] - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Assignment portal for WDD 230 - Web Frontend Development, providing access to tasks, learning resources, and projects. Ideal for students like [Your Full Name], looking to enhance their skills in HTML, CSS, and JavaScript.">
     <meta name="author" content="[Danny Rausseo]">
+    <link rel="stylesheet" href="styles/normalize.css">
+
 
     <!-- Enlace a los archivos CSS -->
     <link rel="stylesheet" href="styles/base.css">
