Agrega imagen del templo y actualiza código HTML

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <h2>Information</h2>
             <!-- Espacio para agregar contenido de información aquí -->
         </section>
+        <picture>
+            <source srcset="imagen-mobile.webp" media="(max-width: 400px)">
+            <source srcset="campinas_brazil_temple_lds.webp">
+            <img src="fallback-image.jpg" alt="Descripción de la imagen">
+          </picture>
     </main>
     <footer>
         <p>© <span id="currentYear"></span> [Danny Rausseo] - [São Paulo - Brazil]</p>
