agregar carpeta chamber y correcion de ruta

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="description" content="Assignment portal for WDD 230 - Web Frontend Development, providing access to tasks, learning resources, and projects. Ideal for students like [Your Full Name], looking to enhance their skills in HTML, CSS, and JavaScript.">
     <meta name="author" content="[Danny Rausseo]">
     <link rel="stylesheet" href="styles/normalize.css">
-
-
-    <!-- Enlace a los archivos CSS -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
@@ -32,6 +29,8 @@
             <h2>Learning Activities</h2>
             <ul>
                 <li><a href="activity1.html">Activity 1</a></li>
+                <a href="chamber/index.html">Go to de chamber-site-plan</a>
+                <li>Week 03: <a href="week03/images/landscape_optimized.webp">WebP</a></li>
                 <!-- Espacio para agregar más elementos de lista si es necesario -->
             </ul>
         </section>
@@ -43,7 +42,7 @@
             <source srcset="imagen-mobile.webp" media="(max-width: 400px)">
             <source srcset="images/campinas_brazil_temple_lds.webp">
             <img src="fallback-image.jpg" alt="Descripción de la imagen">
-          </picture>
+        </picture>
     </main>
     <footer>
         <p>© <span id="currentYear"></span> [Danny Rausseo] - [São Paulo - Brazil]</p>
