actualizar contenido del repositorio wdd230

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li><a href="activity1.html">Activity 1</a></li>
+                <li><a href="week01/chamber-site-plan.html">Chamber Site Plan</a></li>
+
                 <a href="chamber/index.html">Go to de chamber-site-plan</a>
                 <li>Week 03: <a href="week03/images/landscape_optimized.webp">WebP</a></li>
                 <!-- Espacio para agregar más elementos de lista si es necesario -->
