--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
     <header>
@@ -27,7 +28,16 @@
         <!-- Aquí estaba el contenido del main, pero fue eliminado según las instrucciones -->
     </main>
     <aside>
-        <!-- Aquí irá el contenido de la barra lateral -->
+        <aside>
+            <div class="demographics">
+                <!-- Contenido demográfico -->
+            </div>
+            <div class="statistics">
+                <!-- Datos estadísticos -->
+            </div>
+            <!-- Agrega más elementos según sea necesario -->
+        </aside>
+        
         <!-- Incluir el contenido demográfico, estadísticas, imágenes, etc., según lo solicitado en las instrucciones -->
         <!-- Además, se incluirá el mensaje de localStorage sobre la última visita -->
     </aside>
