--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Danny Rausseo] - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="Assignment portal for WDD 230 - Web Frontend Development, providing access to tasks, learning resources, and projects. Ideal for students like [Your Full Name], looking to enhance their skills in HTML, CSS, and JavaScript.">
-    <meta name="author" content="[Danny Rausseo]">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
-   
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Chamber of Commerce of São Paulo - Site Plan</title>
+        <meta name="description" content="This is the site plan for the Chamber of Commerce of São Paulo, detailing the purpose, scenarios, color schema, typography, and wireframes.">
+        <meta name="author" content="Danny Rausseo">
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/base.css">
+        <link rel="stylesheet" href="styles/larger.css">
+    </head>
 <body>
     <header>
         <img src="images/profile.jpg" alt="Profile picture of [Danny Rausseo]">
