--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of Commerce of São Paulo</title>
-    <meta name="description" content="Welcome to the Chamber of Commerce of the City of São Paulo website">
+    <meta name="description" content="Welcome to the Chamber of Commerce of the City of São website">
     <!-- Agregar aquí el enlace al favicon -->
     <!-- Agregar aquí los metadatos para redes sociales (opcional) -->
     <link rel="stylesheet" href="styles/reset.css">
