--- a/chamber/week05/weather.html
+++ b/chamber/week05/weather.html
@@ -1,26 +1,30 @@
-
-
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
-    <link rel="stylesheet" href="styles/weather.css"> <!-- Si tienes un CSS específico -->
+    <link rel="stylesheet" href="chamber/styles/base.css"> 
 </head>
 <body>
-    <h1>OpenWeatherMap.org API Test</h1>
+    <header>
+        <h1>OpenWeatherMap.org API Test</h1>
+    </header>
     <main>
         <p>The current temperature in São Paulo, Brazil is <span id="current-temp"></span></p>
         <figure>
-            <img id="weather-icon" src="" alt="🌦️Weather icon☀️">
+            <img id="weather-icon" src="" alt="Weather icon">
             <figcaption id="description"></figcaption>
         </figure>
+        <div id="weather">
+            <div id="temperature"></div>
+            <div id="weather-condition"></div>
+        </div>
     </main>
-<footer>
-  [Danny Manuel Rausseo Leon] | OpenWeatherMap.org | CC BY-SA 4.0
-</footer>
-<script src="scripts/links.js"></script>
+    <footer>
+        <p>Danny Manuel Rausseo Leon | OpenWeatherMap.org | CC BY-SA 4.0</p>
+    </footer>
+    <script src="scripts/links.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/main.js"></script>
 </body>
